--- a/resources/paymentskins/worldpay/inc/footer.html
+++ b/resources/paymentskins/worldpay/inc/footer.html
@@ -82,7 +82,7 @@
                     <h4>Services</h4>
                     <ul class="unstyled">
                         <li><a href="//78.47.55.182" class="footer-link">Blog</a></li>
-                        <li><a href="http://www.larryslist.de/art-collector-report" class="footer-link">Collector Report</a></li>
+                        <li><a href="http://www.larryslist.de/collector-report" class="footer-link">Collector Report</a></li>
                     </ul>
                 </div>
                 <div class="span2">
