--- a/resources/paymentskins/worldpay/inc/footer.html
+++ b/resources/paymentskins/worldpay/inc/footer.html
@@ -88,18 +88,18 @@
                 <div class="span2">
                     <h4>Info</h4>
                     <ul class="unstyled">
-                        <li><a href="http://www.larryslist.de/artmarket/faq" class="footer-link">FAQ</a></li>
-                        <a href="http://www.larryslist.de/artmarket/careers" class="footer-link">Career</a>
-                        <li><a href="http://www.larryslist.de/artmarket/privacy" class="footer-link">Privacy</a></li>
-                        <a href="http://www.larryslist.de/artmarket/impressum" class="footer-link">Impressum</a>
+                        <li><a href="http://www.larryslist.de/faq" class="footer-link">FAQ</a></li>
+                        <a href="http://www.larryslist.de/careers" class="footer-link">Career</a>
+                        <li><a href="http://www.larryslist.de/privacy" class="footer-link">Privacy</a></li>
+                        <a href="http://www.larryslist.de/impressum" class="footer-link">Impressum</a>
                     </ul>
                 </div>
                 <div class="span2">
                     <h4>Corporate</h4>
                     <ul class="unstyled">
-                        <li><a href="http://www.larryslist.de/artmarket/press" class="footer-link">Press</a></li>
-                        <li><a href="http://www.larryslist.de/artmarket/contact" class="footer-link">Contact</a></li>
-                        <li><a href="http://www.larryslist.de/artmarket/terms" class="footer-link">Terms & Conditions</a></li>
+                        <li><a href="http://www.larryslist.de/press" class="footer-link">Press</a></li>
+                        <li><a href="http://www.larryslist.de/contact" class="footer-link">Contact</a></li>
+                        <li><a href="http://www.larryslist.de/terms" class="footer-link">Terms & Conditions</a></li>
                     </ul>
                 </div>
                 <div class="span4">
