--- a/webapp/larryslist/static/502.html
+++ b/webapp/larryslist/static/502.html
@@ -10,7 +10,7 @@
     <meta http-equiv="cleartype" content="on">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <link href='//fonts.googleapis.com/css?family=Open+Sans:400italic,400,700,300|Playfair+Display+SC:400,700' rel='stylesheet' type='text/css'>
-    <link rel="stylesheet" type="text/css" href="/static/css/site.min.css">
+    <link rel="stylesheet" type="text/css" href="/web/static/css/site.min.css">
 
 </head>
 <body>
@@ -22,11 +22,13 @@
     </div>
     </div>
     <div class="page-wrapper">
-    <div class="row">
-        <div class="span12">
-            <h4 class="box-title center">Due to massive demand the server is currently unable to process your request. Please try again later.</h4>
+        <div class="container">
+            <div class="row">
+                <div class="span12">
+                    <h4 style="pading-top:120px;padding-bottom:120px;" class="box-title center">Due to massive demand the server is currently unable to process your request. Please try again later.</h4>
+                </div>
+            </div>
         </div>
-    </div>
     </div>
     <footer class="footer">
         <div class="container">
