--- a/webapp/larryslist/static/502.html
+++ b/webapp/larryslist/static/502.html
@@ -25,7 +25,7 @@
         <div class="container">
             <div class="row">
                 <div class="span12">
-                    <h4 style="pading-top:120px;padding-bottom:120px;" class="box-title center">Due to massive demand the server is currently unable to process your request. Please try again later.</h4>
+                    <h4 style="padding-top:200px;padding-bottom:200px;" class="box-title center">Due to massive demand the server is currently unable to process your request. Please try again later.</h4>
                 </div>
             </div>
         </div>
