--- a/resources/paymentskins/worldpay/inc/resultY.html
+++ b/resources/paymentskins/worldpay/inc/resultY.html
@@ -4,100 +4,37 @@
 		<link rel="stylesheet" type="text/css" href="https://secure-test.worldpay.com/i/301925/stylesheet.css">
 	</head>
 <BODY>
-	<div class="navbar">
-    <div class="navbar-inner">
-        <div class="container">
-            <a class="brand" href="http://www.larryslist.com">Larry's List</a>
-            <ul class="nav pull-right">
-                <li class="nav-entry"><a class="nav-entry-link" href="#">Blog</a></li>
-                <li class="nav-entry"><a class="nav-entry-link" href="#">Analytics</a></li>
-            </ul>
-        </div>
+<div class="navbar">
+<div class="navbar-inner">
+    <div class="container">
+        <a class="brand" href="http://www.larryslist.com/payment/done?refresh=1">Larry's List</a>
     </div>
 </div>
+</div>
+
 <div class="container"><div class="row">
 <div class="funnel-header">
 	<ul class="inline">
-	    <li> 
-		<b>1</b>
-		<span>Choose your price plan</span>
-
-		<i></i></li>
-   	    <li><b>2</b><span>Payment Method</span>
-		<i></i></li>
-	    <li class="selected"><b>3</b><span>Order Review</span>
-		<i></i></li>
+	    <li><b>1</b><span>Choose your price plan</span><i></i></li>
+   	    <li><b>2</b><span>Payment Method</span><i></i></li>
+	    <li class="selected"><b>3</b><span>Order Review</span><i></i></li>
 	</ul>
 </div>
 </div></div>
-<div id="pmcontent" class="container"><div class="row"><div class="span9">
-<WPDISPLAY ITEM=banner>
-	</div>
-    <div class="span3">
-        <div class="checkout-sidebar">
-            <h4 class="box-title">Questions?</h4>
-            <div class="accordion" id="faq-accordion">
 
-                <div class="accordion-group">
-                    <div class="accordion-heading">
-                        <a class="accordion-toggle " data-parent="#faq-accordion" href="#what-do-i-get" onclick="function(){ return false; }">
-                            <span class="faq-arrow"></span>What do I get?
-                        </a>
-                    </div>
-                    <div id="what-do-i-get" class="accordion-body collapse in">
-                        <div class="accordion-inner">
-                        We compiled detailed information on leading art collectors around the world. Profile’s completeness can vary depending on the information available. It can include contact details, information on artists in collection, type of art engagements and personal information.
-                        </div>
-                    </div>
-                </div>
+<div id="pmcontent" class="container">
+    <div class="row">
+        <div class="span12">
+            <WPDISPLAY ITEM=banner>
 
-
-                <div class="accordion-group">
-                    <div class="accordion-heading">
-                        <a class="accordion-toggle"  onclick="function(){ return false; }" href="#why-payment-data">
-                            <span class="faq-arrow"></span>Are you complying with data privacy standards?
-                        </a>
-                    </div>
-                    <div id="why-payment-data" class="accordion-body collapse ">
-                        <div class="accordion-inner">
-                        Yes. We only compile information that is also publicly available on accessible sources such as magazines, internet etc.
-                        </div>
-                    </div>
-                </div>
-
-
-                <div class="accordion-group">
-                    <div class="accordion-heading">
-                        <a class="accordion-toggle"  onclick="function(){ return false; }" href="#what-if-no-like">
-                            <span class="faq-arrow"></span>For how long can I access the profile?
-                        </a>
-                    </div>
-                    <div id="what-if-no-like" class="accordion-body collapse ">
-                        <div class="accordion-inner">
-                        You can access it for one year.
-                        </div>
-                    </div>
-                </div>
-
-
-                <div class="accordion-group">
-                    <div class="accordion-heading">
-                        <a class="accordion-toggle" onclick="function(){ return false; }" href="#larryslist-is-safe">
-                            <span class="faq-arrow"></span>How long are my credits valid?
-                        </a>
-                    </div>
-                    <div id="larryslist-is-safe" class="accordion-body collapse ">
-                        <div class="accordion-inner">
-                        Credits don’t have an expiry date. You can use them anytime and also top-up your credits anytime. 
-                        </div>
-                    </div>
-                </div>
+            <div class="center">
+            <a class="btn btn-primary" href="http://www.larryslist.com/payment/done?refresh=1"
+            style="color:white;text-align: center;margin-top: 25px;display: inline-block;font-size: 2em;line-height: 1em;padding: 10px 20px;font-weight: normal;border-radius: 10px;">
+            View your Profiles</a>
             </div>
         </div>
     </div>
 </div>
-</div>
-</form>
 
 <div class="footer">
     <div class="container">
@@ -105,35 +42,35 @@
                 <div class="span2">
                     <h4>About</h4>
                     <ul class="unstyled">
-                        <li><a href="http://www.larryslist.de#what-you-get" class="footer-link">What you get</a></li>
-                        <li><a href="http://www.larryslist.de#pricing" class="footer-link">Pricing</a></li>
-                        <li><a href="http://www.larryslist.de#ranking" class="footer-link">Collector Ranking</a></li>
-                        <li><a href="http://www.larryslist.de#data-sources" class="footer-link">Data Sources</a></li>
-                        <li><a href="http://www.larryslist.de#who-is-larry" class="footer-link">Who is Larry?</a></li>
+                        <li><a href="http://www.larryslist.com#what-you-get" class="footer-link">What you get</a></li>
+                        <li><a href="http://www.larryslist.com#pricing" class="footer-link">Pricing</a></li>
+                        <li><a href="http://www.larryslist.com#ranking" class="footer-link">Collector Ranking</a></li>
+                        <li><a href="http://www.larryslist.com#data-sources" class="footer-link">Data Sources</a></li>
+                        <li><a href="http://www.larryslist.com#who-is-larry" class="footer-link">Who is Larry?</a></li>
                     </ul>
                 </div>
                 <div class="span2">
                     <h4>Services</h4>
                     <ul class="unstyled">
                         <li><a href="//78.47.55.182" class="footer-link">Blog</a></li>
-                        <li><a href="http://www.larryslist.de/art-collector-report" class="footer-link">Collector Report</a></li>
+                        <li><a href="http://www.larryslist.com/art-collector-report" class="footer-link">Collector Report</a></li>
                     </ul>
                 </div>
                 <div class="span2">
                     <h4>Info</h4>
                     <ul class="unstyled">
-                        <li><a href="http://www.larryslist.de/faq" class="footer-link">FAQ</a></li>
-                        <a href="http://www.larryslist.de/careers" class="footer-link">Career</a>
-                        <li><a href="http://www.larryslist.de/privacy" class="footer-link">Privacy</a></li>
-                        <a href="http://www.larryslist.de/impressum" class="footer-link">Impressum</a>
+                        <li><a href="http://www.larryslist.com/faq" class="footer-link">FAQ</a></li>
+                        <a href="http://www.larryslist.com/careers" class="footer-link">Career</a>
+                        <li><a href="http://www.larryslist.com/privacy" class="footer-link">Privacy</a></li>
+                        <a href="http://www.larryslist.com/impressum" class="footer-link">Imprint</a>
                     </ul>
                 </div>
                 <div class="span2">
                     <h4>Corporate</h4>
                     <ul class="unstyled">
-                        <li><a href="http://www.larryslist.de/press" class="footer-link">Press</a></li>
-                        <li><a href="http://www.larryslist.de/contact" class="footer-link">Contact</a></li>
-                        <li><a href="http://www.larryslist.de/terms" class="footer-link">Terms & Conditions</a></li>
+                        <li><a href="http://www.larryslist.com/press" class="footer-link">Press</a></li>
+                        <li><a href="http://www.larryslist.com/contact" class="footer-link">Contact</a></li>
+                        <li><a href="http://www.larryslist.com/terms" class="footer-link">Terms & Conditions</a></li>
                     </ul>
                 </div>
                 <div class="span4">
@@ -149,6 +86,5 @@
         </div>
     </div>
 </div>
-<form>
 </BODY>
 </HTML>
